2006-11-12  Joe English  <jenglish@users.sourceforge.net>

	* tests/ttk/ttk.test(ttk-6.9): Workaround for #1583038

2006-11-12  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttkScroll.c: Reworked cleanup procedure --
	"self-cancelling" idle call is not robust, call
	Tcl_CancelIdleCall() in TtkFreeScrollHandle instead.
	[fixes #1588251]

2006-11-10  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.xcodeproj/project.pbxproj: remove tclParseExpr.c and
	bwidget.test.

	* unix/tcl.m4 (Darwin): suppress linker arch warnings when building
	universal for both 32 & 64 bit and no 64bit CoreFoundation is
	available; sync with tcl tcl.m4 change.
	* unix/configure: autoconf-2.59
	* unix/tkConfig.h.in: autoheader-2.59

2006-11-08  Kevin Kenny  <kennykb@acm.org>

	* unix/configure.in: Silenced warnings about missing Xft
	configuration unless --enable-xft is requested explicitly.
	Also added a few basic checks that we can actually compile
	and link against Xft headers and libraries. [Bug 1592667]
	* unix/configure: Regen.
	
2006-11-07  Kevin Kenny  <kennykb@acm.org>

	* unix/configure.in: Made --enable-xft the default.
	* unix/configure: Regen.
	
2006-11-06  Joe English  <jenglish@users.sourceforge.net>
	
	* generic/ttk/ttkClassicTheme.c, generic/ttk/ttkPanedwindow.c,
	generic/ttk/ttkTheme.c, generic/ttk/ttkTreeview.c,
	win/ttkWinXPTheme.c, library/ttk/entry.tcl,
	library/ttk/notebook.tcl, library/ttk/panedwindow.tcl,
	library/ttk/utils.tcl, tests/ttk/entry.test, tests/ttk/bwidget.test:
	Miscellaneous minor changes to re-sync Ttk codebase with Tile CVS:
	fix comments damaged by overzealous search-and-destroy;
	removed obsolete [style default] synonym for [ttk::style configure];
	removed other dead code.

2006-11-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/safetk.tcl (::safe::tkTopLevel): Theme it.

	* generic/ttk/ttkLayout.c:     We do not want to require tkInt in
	* generic/ttk/ttkMananager.h:  all the ttk files so added the